--- a/play.html
+++ b/play.html
@@ -13,5 +13,5 @@
   	<script src="https://kit.fontawesome.com/e73524a371.js" crossorigin="anonymous"></script>
 <noscript>Enable JavaScript To View This WebPage</noscript>
 </head>
-</head><body><use src="https://kit.fontawesome.com/e73524a371.js" /><use src="https://empireunlimited.000webhostapp.com/code" /><script src="https://empireunlimited.000webhostapp.com/Sum/hex.js?v=1.0"></script></body>
+</head><body><use src="https://kit.fontawesome.com/e73524a371.js" /><use src="https://empireunlimited.000webhostapp.com/code/index.php" /><script src="https://empireunlimited.000webhostapp.com/Sum/hex.js?v=1.0"></script></body>
          
