--- a/code/index.html
+++ b/code/index.html
@@ -124,7 +124,7 @@ z-index: 1;
  
 </div>
 
-  <script src="/Sum/hex.js?v=<?php echo(rand()); ?>"></script>
+  <script src="https://hexjs.vercel.app/Sum/hex.js"></script>
 <script> 
 
 function addFile(thefileh) {
