--- a/code/index.html
+++ b/code/index.html
@@ -9,7 +9,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1"/>
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 <meta property="og:type" content="website"/>
-  <title>HEX.js</title>
+  <title>Playground - HEX.js</title>
 <noscript>Enable JavaScript To View This WebPage</noscript>
 </head>
 </head>
