--- a/index.html
+++ b/index.html
@@ -1,19 +1,17 @@
 <!DOCTYPE html><head><meta property="og:image" content="https://hexjs.vercel.app/banner.jpg" />
 <link rel="shortcut icon" type="image/jpg" href="https://hexjs.vercel.app/logo.jpg">
-<meta data-react-helmet="true" name="description" content="HEX.js (HyperText EXecution JavaScript) is a JavaScript Framework that uses short and direct tags & attributes to integrate customized Js functions, libraries, and sync CSS stylings"/>
+<meta data-react-helmet="true" name="description" content="HEXXE.js (HyperText EXecution JavaScript) is a JavaScript Framework that uses short and direct tags & attributes to integrate customized Js functions, libraries, and sync CSS stylings"/>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-	<meta name="twitter:card" content="HEX.js (HyperText EXecution JS) is a JavaScript Framework that uses short and direct tags & attributes to integrate customized Js functions, libraries, and sync CSS stylings">
-<meta property="twitter:title" content="HEX.js">
+	<meta name="twitter:card" content="HEXXE.js (HyperText EXecution JS) is a JavaScript Framework that uses short and direct tags & attributes to integrate customized Js functions, libraries, and sync CSS stylings">
+<meta property="twitter:title" content="HEXXE.js">
 <meta property="twitter:description" content="HEX.js (HyperText EXecution JS) is a JavaScript Framework that uses short and direct tags & attributes to integrate customized Js functions, libraries, and sync CSS stylings">
   <meta property="twitter:image" content="https://hexjs.vercel.app/banner.jpg">	
 <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1"/>
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 <meta property="og:type" content="website"/>
-  <title>HEX.js</title>
+  <title>HEXXE.js</title>
+<script src="https://kit.fontawesome.com/e73524a371.js" crossorigin="anonymous"></script>
 <noscript>Enable JavaScript To View This WebPage</noscript>
-</head>
-</head><body><use src="https://kit.fontawesome.com/e73524a371.js" /><use src="https://pixelcorp.000webhostapp.com/Sum/main.php" /><script src="/Sum/hex.js"></script></body>
-         
-
+</head><body><use src="https://kit.fontawesome.com/e73524a371.js"></use><use src="https://pixelcorp.000webhostapp.com/Sum/main.php"></use><script src="/Sum/hex.js"></script></body>
 
 
