--- a/tutorial/index.html
+++ b/tutorial/index.html
@@ -15,7 +15,7 @@
 <noscript>Enable JavaScript To View This WebPage</noscript>
 </head>
 <body>
-<use src="tutornav.php"></use>
+<use src="https://pixelcorp.000webhostapp.com/tutorial/tutornav.php"></use>
 <style>
 html, body {
 margin: 0px;
