--- a/tutorial/index.html
+++ b/tutorial/index.html
@@ -71,7 +71,7 @@ td, th {
     
 </table>
 
-<use src="/footer.php"></use>
+<use src="https://pixelcorp.000webhostapp.com/footer.php"></use>
 
 <script src="/Sum/hex.js?v=<?php echo(rand()); ?>"></script>
 
