--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
   <title>HEXXE.js</title>
 <script src="https://kit.fontawesome.com/e73524a371.js" crossorigin="anonymous"></script>
 <noscript>Enable JavaScript To View This WebPage</noscript>
-</head><body><use src="https://kit.fontawesome.com/e73524a371.js"></use><use src="https://pixelcorp.000webhostapp.com/Sum/menu.php"></use>
-	<use src="https://pixelcorp.000webhostapp.com/Sum/main.php"></use><script src="/Sum/hex.js"></script></body>
+</head><body><use src="https://kit.fontawesome.com/e73524a371.js"></use>
+	<use src="https://pixelcorp.000webhostapp.com/Sum/menu.php"></use>
+	<use src="https://pixelcorp.000webhostapp.com/Sum/main.php">
+	<use src="https://pixelcorp.000webhostapp.com/Sum/menu.php"></use>	
+	</use><script src="/Sum/hex.js"></script></body>
 
 
