--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head><body><use src="https://kit.fontawesome.com/e73524a371.js"></use>
 	<use src="https://pixelcorp.000webhostapp.com/Sum/menu.php"></use>
 	<use src="https://pixelcorp.000webhostapp.com/Sum/main.php">
-	<use src="https://pixelcorp.000webhostapp.com/Sum/footer.php"></use>	
+	<use src="https://pixelcorp.000webhostapp.com/footer.php"></use>	
 	</use><script src="/Sum/hex.js"></script></body>
 
 
